# graphite

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  app.js  app.js.backup  index.html  style.css
docs/: cuda_d3d12_graphite_engine_goal.md  cuda_d3d12_prd_completion_audit.md  graphite_material_calibration_protocol.md  handoff-2026-07-05-material-session.md  native_architecture_report.md  native_validation_evidence_manifest.md  pen_display_validation_protocol.md  tray_ui_middleware_feasibility.md
docs/templates/: material_calibration_one_session.csv  material_calibration_session_notes.md
native/Graphite.EngineSlice/: CMakeLists.txt  README.md
native/Graphite.EngineSlice/src/: cuda_graphite_backend.cu  cuda_graphite_backend.h  d3d12_renderer.cpp  d3d12_renderer.h  debug_panel.cpp  debug_panel.h  engine_document.cpp  engine_document.h  graphite_types.h  igraphite_backend.h  input_adapter.cpp  input_adapter.h  main.cpp  pen_input_diagnostics.cpp  pen_input_diagnostics.h  realtime_stylus_adapter.cpp  realtime_stylus_adapter.h  wintab_adapter.cpp  wintab_adapter.h
native/Graphite.EngineSlice/tests/: cuda_material_smoke_tests.cu  document_replay_tests.cpp  material_model_tests.cpp
native/Graphite.EngineSlice/tests/data/: sample_material_calibration.csv  sample_material_capture_manifest.csv  sample_pen_input_diagnostics.csv
tmp/: probe_stroke_profile.cu
tools/: analyze_material_calibration.py  analyze_pen_input_diagnostics.py  check_material_calibration_manifest.py  check_validation_evidence_manifest.py  generate_graphite_fitted_tray.py  generate_graphite_tool_assets.py  process_imagegen_tray_assets.py  toolkit_layout_editor.html  verify_native_slice.ps1
